WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146287
Better fix for Element with blur backdrop-filter shows edge duplication and dark edges
https://bugs.webkit.org/show_bug.cgi?id=146287
Summary
Better fix for Element with blur backdrop-filter shows edge duplication and d...
Dean Jackson
Reported
2015-06-24 13:07:51 PDT
Better fix for Element with blur backdrop-filter shows edge duplication and dark edges
Attachments
Patch
(8.83 KB, patch)
2015-06-24 13:12 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-06-24 13:11:15 PDT
<
rdar://problem/21530437
>
Dean Jackson
Comment 2
2015-06-24 13:12:58 PDT
Created
attachment 255508
[details]
Patch
Dean Jackson
Comment 3
2015-06-24 13:55:40 PDT
Committed
r185925
: <
http://trac.webkit.org/changeset/185925
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug